--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
     <meta name="description" content="Welcome to my Kakao clone" />
     <meta name="author" content="SeonjuYang" />
     <title>This is my title</title>
+    <link href="styles.css" rel="stylesheet">
   </head>
   <body>
     <section>
       <header id="headernumberone" class="defaultHeader">
         <h1>Title of a section</h1>
+        <a href="contanct_me.html" target="_blank">fake link</a>
       </header>
     </section>
     <div>
