--- a/selectors.html
+++ b/selectors.html
@@ -5,9 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Selectors and Pseudo Selectors</title>
     <style>
-       input[required=":required"]{
-           background-color: red;
-       }
+        input[required="required"]{
+            background-color: red;
+        }
+        .box:nth-child(3n+1){
+            background-color:pink;
+        }
+        .container>.box{
+            background-color:yellow;
+        }
         input{
             border: 1px solid yellow;
         }
@@ -16,15 +22,29 @@
             height:100px;
             border:1px solid black;
         }
+        .child{
+            width:40px;
+        }
+      
     </style>
 </head>
 <body>
     <div class="container">
+        <div class="box">
+            <div class="box child"></div>
+        </div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
         <div class="box"></div>
         <div class="box"></div>
         <div class="box">
-            <input type="password" required="required">
-            <input type="submit" required="required">
+            <input type="password" required="required"/>
+            <input type="submit"required="required"/>
         </div>
     </div>
 </body>
