--- a/css_states.html
+++ b/css_states.html
@@ -8,10 +8,20 @@
     <style>
         .box{
             background-color: red;
+            font-size: 40px;
+        }
+        .box:hover{
+            background-color: pink;
+        }
+        .box:active{
+            background-color: green;
+        }
+        .box:focus{
+            background-color: blue;
         }
     </style>
 </head>
 <body>
-    <div class="box">lalala</div>
+    <textarea class="box">lalalalala</textarea>
 </body>
 </html>
