--- a/Kakao_practice/index.html
+++ b/Kakao_practice/index.html
@@ -14,10 +14,13 @@
     <div class="status-bar">
       <div class="status-bar__column">
         <span class="status-bar__clock">11:10</span>
-        <i class="far fa-clock"></i>
       </div>
-
       <div class="status-bar__column"></div>
+      <i class="far fa-clock"></i>
+      <i class="fas fa-volume-mute"></i>
+      <i class="fas fa-wifi"></i>
+      <span class="status-bar__battery-level">100%</span>
+      <i class="fas fa-battery-full"></i>
     </div>
   </body>
 </html>
