--- a/Kakao_practice/index.html
+++ b/Kakao_practice/index.html
@@ -15,12 +15,13 @@
       <div class="status-bar__column">
         <span class="status-bar__clock">11:10</span>
       </div>
-      <div class="status-bar__column"></div>
-      <i class="far fa-clock"></i>
-      <i class="fas fa-volume-mute"></i>
-      <i class="fas fa-wifi"></i>
-      <span class="status-bar__battery-level">100%</span>
-      <i class="fas fa-battery-full"></i>
+      <div class="status-bar__column">
+        <i class="far fa-clock"></i>
+        <i class="fas fa-volume-mute"></i>
+        <i class="fas fa-wifi"></i>
+        <span class="status-bar__battery-level">100%</span>
+        <i class="fas fa-battery-full"></i>
+      </div>
     </div>
   </body>
 </html>
