--- a/Kakao_practice/index.html
+++ b/Kakao_practice/index.html
@@ -8,7 +8,7 @@
       src="https://kit.fontawesome.com/64b795b117.js"
       crossorigin="anonymous"
     ></script>
-    <title>tChats | kakao Clone</title>
+    <title>Chats | kakao Clone</title>
   </head>
   <body>
     <div class="status-bar">
@@ -39,5 +39,29 @@
         </span>
       </div>
     </header>
+    <nav class="nav">
+      <ul class="nav__list">
+        <li class="nav__list-item">
+          <a href="friends.html" class="nav__list-link">
+            <i class="far fa-user"></i>
+          </a>
+        </li>
+        <li class="nav__list-item">
+          <a href="index.html" class="nav__list-link">
+            <i class="fas fa-comment"></i>
+          </a>
+        </li>
+        <li class="nav__list-item">
+          <a href="find.html" class="nav__list-link">
+            <i class="fas fa-search"></i>
+          </a>
+        </li>
+        <li class="nav__list-item">
+          <a href="more.html" class="nav__list-link">
+            <i class="fas fa-ellipsis-h"></i>
+          </a>
+        </li>
+      </ul>
+    </nav>
   </body>
 </html>
