--- a/Kakao_practice/index.html
+++ b/Kakao_practice/index.html
@@ -39,6 +39,22 @@
         </span>
       </div>
     </header>
+    <main class="Chats">
+      <ul class="chats_list">
+        <li class="chats__chat">
+          <div class="chat__column">
+            <img class="chat__avatar" src="image/avatar.jpg" />
+            <div class="chat__content">
+              <span class="chat_username">Emma</span>
+              <span class="Chat_preview">I made it!</span>
+            </div>
+          </div>
+          <div class="chat__column">
+            <span class="chat__timestamp">Yesterday</span>
+          </div>
+        </li>
+      </ul>
+    </main>
     <nav class="nav">
       <ul class="nav__list">
         <li class="nav__list-item">
