--- a/Kakao_practice/find.html
+++ b/Kakao_practice/find.html
@@ -8,7 +8,7 @@
       src="https://kit.fontawesome.com/64b795b117.js"
       crossorigin="anonymous"
     ></script>
-    <title>find | kakao Clone</title>
+    <title>Find | kakao Clone</title>
   </head>
   <body>
     <div class="status-bar">
@@ -30,9 +30,6 @@
       <div class="header__header-column">
         <span class="header__icon">
           <i class="fas fa-search"></i>
-        </span>
-        <span class="header__icon">
-          <i class="far fa-comment"></i>
         </span>
         <span class="header__icon">
           <i class="fas fa-cog"></i>
