--- a/Kakao_practice/more.html
+++ b/Kakao_practice/more.html
@@ -39,6 +39,77 @@
         </span>
       </div>
     </header>
+    <main class="more">
+      <header class="more__header">
+        <div class="friends__friend friend friend--lg">
+          <div class="friend__column">
+           <img src="image/avatar.jpg" class="g-avatar friend__avartar">
+            <div class="friend__content">
+            <span class="friend__name">
+              Emma
+            </span>
+            <span class="friend__status">
+              yangsj1110@naver.com
+            </span>
+          </div> 
+          <div class="friend__column">
+            <i class="far fa-comment-alt fa-2x"></i>
+          </div>
+          </div>         
+        </div>
+        <ul class="more__btn-list">
+          <li class="more-btn">
+            <span class="more__btn-icon">
+              <i class="far fa-smile fa-2x"></i>
+            </span>
+            <span class="more__btn-title">
+              Emoticons
+            </span>
+            <span class="more__btn-icon">
+              <i class="fas fa-brush fa-2x"></i>
+            </span>
+            <span class="more__btn-title">
+              Themes
+            </span>
+            <span class="more__btn-icon">
+              <i class="fab fa-kickstarter-k fa-2x"></i>
+            </span>
+            <span class="more__btn-title">
+              Account
+            </span>
+          </li>
+        </ul>
+      </header>
+      <section class="more__suggestions">
+        <h5 class="more__title">Suggestions</h5>
+        <ul class="more__suggestions-list">
+          <li class="more__suggestion suggestion">
+            <span class="suggestion__icon">
+              <i class="fas fa-quote-right fa-2x"></i>
+            </span>
+            <span class="suggestion__title">
+              Kakao Story
+            </span>
+          </li>
+          <li class="more__suggestion suggestion">
+            <span class="suggestion__icon">
+              <i class="fas fa-beer fa-2x"></i>
+            </span>
+            <span class="suggestion__title">
+              Kakao friends
+            </span>
+          </li>
+          <li class="more__suggestion suggestion">
+            <span class="suggestion__icon">
+              <i class="fas fa-gamepad fa-2x"></i>
+            </span>
+            <span class="suggestion__title">
+              Freinds Gem
+            </span>
+          </li>
+        </ul>
+      </section>
+    </main>
     <nav class="nav">
       <ul class="nav__list">
         <li class="nav__list-item">
