--- a/Kakao_practice/index.html
+++ b/Kakao_practice/index.html
@@ -42,6 +42,7 @@
     <main class="Chats">
       <ul class="chats_list">
         <li class="chats__chat">
+          <a href="chat.html">
           <div class="chat__column">
             <img class="chat__avatar" src="image/avatar.jpg" />
             <div class="chat__content">
@@ -49,6 +50,7 @@
               <span class="Chat_preview">I made it!</span>
             </div>
           </div>
+          </a>
           <div class="chat__column">
             <span class="chat__timestamp">Yesterday</span>
           </div>
