--- a/Kakao_practice/chat.html
+++ b/Kakao_practice/chat.html
@@ -8,6 +8,7 @@
       src="https://kit.fontawesome.com/64b795b117.js"
       crossorigin="anonymous"
     ></script>
+    <link rel="stylesheet" href="css/styles.css"/>
     <title>Chat | kakao Clone</title>
   </head>
   <body>
